--- a/src/styling/layout/_header.scss
+++ b/src/styling/layout/_header.scss
@@ -1,74 +1,37 @@
-#menu {
-  width: 320px;
-  height: 100vh;
-  padding: 2%;
-  position: sticky;
-  background: $second-background-color;
-  overflow-y: auto;
-  flex-shrink: 0;
-  top: 0%;
+.show {
+  display: block !important;
+}
+
+.menu {
   display: none;
 
-  .logo {
-    width: 150px;
-    height: 44px;
-  }
+  .flex-column {
+    margin-top: 14vh;
+    padding: 2% 6% 2% 6%;
+    position: sticky;
+    overflow-y: auto;
+    flex-shrink: 0;
+    left: 0%;
+    z-index: 2;
+    width: 100%;
+    top: 0%;
+    min-height: 100vh;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  #sidebar {
-    height: 100%;
-    display: block;
-
-    h1 {
-      margin-top: 20px !important;
-      font-size: 22px;
-
-      a {
-        color: $link-color;
-        display: block;
-      }
-    }
     ul {
-      padding: 0 !important;
+      width: 100%;
+
       li {
-        margin: 8px 0;
-      }
-      a {
-        display: block;
-        line-height: 1.8;
-        color: $link-color;
-        opacity: 0.8;
-        font-size: 16px !important;
-      }
-    }
-
-    .sublist {
-      margin-left: 5px;
-
-      a {
-        font-size: 14px !important;
+        width: 100%;
+        padding: 2%;
+        margin-bottom: 1px;
+        background: rgb(233, 233, 233);
+        text-align: left;
+        font-size: 16px;
       }
     }
   }
-}
-
-#sidebar ul li a:hover {
-  background: $hover;
-}
-
-#sidebar ul li.active > a,
-a[aria-expanded="true"] {
-  color: #fff;
-  background: $hover;
-}
-
-a[data-toggle="collapse"] {
-  position: relative;
-}
-
-.dropdown-toggle::after {
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
 }
