--- a/src/styling/pages/_index.scss
+++ b/src/styling/pages/_index.scss
@@ -1,18 +1,78 @@
+header {
+  top: 0%;
+  left: 0%;
+  position: fixed;
+  display: grid;
+  width: 100%;
+  height: 14vh;
+  align-items: center;
+  background: #fff;
+  border-bottom: solid 2px $second-background-color;
+  z-index: 4;
+
+  .logo {
+    position: absolute;
+    z-index: 4;
+    left: 6%;
+  }
+
+  .menu-btn {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    right: 6%;
+    z-index: 10;
+  }
+  .menu-btn-burguer {
+    width: 30px;
+    height: 5px;
+    background: #000000;
+    border-radius: 5px;
+  }
+
+  .menu-btn-burguer::before,
+  .menu-btn-burguer::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 5px;
+    border-radius: 5px;
+    background: #000000;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .menu-btn-burguer::before {
+    transform: translateY(-10px);
+  }
+
+  .menu-btn-burguer::after {
+    transform: translateY(10px);
+  }
+
+  .menu-btn.open .menu-btn-burguer {
+    transform: translateX(-50px);
+    background: transparent;
+    box-shadow: none;
+  }
+
+  .menu-btn.open .menu-btn-burguer::before {
+    transform: rotate(45deg) translate(35px, -35px);
+  }
+
+  .menu-btn.open .menu-btn-burguer::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+  }
+}
+
 .index {
+  margin-top: 14vh;
   width: 100%;
   min-height: 100vh;
-
-  header {
-    display: grid;
-    height: 10vh;
-    align-items: center;
-    padding: 10px;
-    grid-template-columns: 65% 35%;
-
-    .main-logo {
-      width: 130px;
-    }
-  }
   .search {
     background: #eeeeee;
     width: 100%;
